{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 24,
  "lineage": "72634bcc-8ef1-0c74-e4ce-b9c75adbe026",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "3306",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2023-12-03T08:36:22.130-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hnmxcjmmxcqwncva/global/firewalls/firewall",
            "log_config": [],
            "name": "firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/hnmxcjmmxcqwncva/global/networks/vpc3",
            "priority": 1000,
            "project": "hnmxcjmmxcqwncva",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hnmxcjmmxcqwncva/global/firewalls/firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/hnmxcjmmxcqwncva/global/networks/vpc3",
            "mtu": 0,
            "name": "vpc3",
            "project": "hnmxcjmmxcqwncva",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hnmxcjmmxcqwncva/global/networks/vpc3"
          }
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-hc-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-03T08:36:22.224-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hnmxcjmmxcqwncva/global/firewalls/load-balancer-hc",
            "log_config": [],
            "name": "load-balancer-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/hnmxcjmmxcqwncva/global/networks/vpc3",
            "priority": 1000,
            "project": "hnmxcjmmxcqwncva",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hnmxcjmmxcqwncva/global/firewalls/load-balancer-hc",
            "source_ranges": [
              "209.85.152.0/22",
              "209.85.204.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "my-target-pool"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc3"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-lb-fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-03T08:36:22.235-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/hnmxcjmmxcqwncva/global/firewalls/load-balancer-vm-service",
            "log_config": [],
            "name": "load-balancer-vm-service",
            "network": "https://www.googleapis.com/compute/v1/projects/hnmxcjmmxcqwncva/global/networks/vpc3",
            "priority": 1000,
            "project": "hnmxcjmmxcqwncva",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hnmxcjmmxcqwncva/global/firewalls/load-balancer-vm-service",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "my-target-pool"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc3"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2023-12-03T08:35:52.241-08:00",
            "id": "projects/hnmxcjmmxcqwncva/regions/us-central1/forwardingRules/load-balancer",
            "ip_address": "34.171.30.63",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "load-balancer",
            "network_tier": "PREMIUM",
            "port_range": "80",
            "project": "hnmxcjmmxcqwncva",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/hnmxcjmmxcqwncva/regions/us-central1/forwardingRules/load-balancer",
            "target": "https://www.googleapis.com/compute/v1/projects/hnmxcjmmxcqwncva/regions/us-central1/targetPools/load-balancer"
          },
          "dependencies": [
            "module.lb.google_compute_http_health_check.default",
            "module.lb.google_compute_target_pool.default"
          ]
        }
      ]
    }
  ]
}